--- a/css/768px/photocard.css
+++ b/css/768px/photocard.css
@@ -1,5 +1,12 @@
 /* If screen reaches 768px */
 @media screen and (max-width: 768px) {
+    .upload {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        width: 100%;
+    }
+
     .nav-links {
         display: none; /* Hide the navigation links on smaller screens */
     }
