--- a/css/768px/photocard.css
+++ b/css/768px/photocard.css
@@ -1,10 +1,15 @@
 /* If screen reaches 768px */
 @media screen and (max-width: 768px) {
-    .upload {
+    .p-upload {
         display: flex;
         flex-direction: column;
         height: auto;
         width: 100%;
+    }
+
+    .checkout {
+        display: flex;
+        flex-direction: column;
     }
 
     .nav-links {
