--- a/css/photocard.css
+++ b/css/photocard.css
@@ -495,7 +495,7 @@ html, body {
     color: white;
 }
 
-.popup {
+.popup-one {
     position: relative;
     height: auto;
     background-color: transparent;
