--- a/css/768px/index.css
+++ b/css/768px/index.css
@@ -1,4 +1,25 @@
-/* If screen reaches 768px */
+/* If screen reaches 1100px */
+@media screen and (max-width: 1100px) {
+    .contact-d {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        height: auto;
+        width: 100%;
+    }
+
+    .contact-two {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+/* If screen reaches 720px */
+@media screen and (max-width: 720px) {
+    /* contact-two - fix soon... */
+}
+
 @media screen and (max-width: 768px) {
     .nav-links {
         display: none; /* Hide the navigation links on smaller screens */
